syntax = "proto3";

message Message {
  float version = 1;
  string id = 2;
  enum Type {
    SERVER_ACK = 0;
    CLIENT_ACK = 1;
    INDIVIDUAL = 2;
    NOTIFICATION = 3;
    GROUP = 4;
    CUSTOM = 10;
  }
  Type type = 3;
  bool ephemeral = 4;
  string source = 5;
  string destination = 6;
  uint64 timestamp = 7;
  bytes content = 8;
  map<string, string> meta = 9;
  string server_id = 10;
  uint64 server_timestamp = 11;
}

message UserConnectionState {
  string user = 1;
  enum State {
    CONNECTED = 0;
    DISCONNECTED = 2;
  }
  State state = 2;
  string gateway = 3;
}

message Login {
  string user = 1;
  string deviceId = 2;
  string notificationToken = 3;
  float messageVersion = 4;
}
